<resources>
    <string name="app_name">My Places</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="list_fragment_label">My Places</string>
    <string name="edit_fragment_label">Add Place</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="show_map">Show Map</string>
    <string name="new_place">New Place</string>
    <string name="my_places_list">My Places</string>
    <string name="about">About</string>
    <string name="ok">Ok</string>
    <string name="about_text">Lorem ipsum dolor sit amet...</string>
    <string name="title_activity_my_places_list">MyPlacesList</string>
    <string name="editmyplace_desc_label">Description</string>
    <string name="editmyplace_add_label">Add</string>
    <string name="editmyplace_cancel_label">Cancel</string>
    <string name="editmyplace_name_label">Name</string>
    <string name="editmyplace_save_label">Save</string>
    <string name="viewmyplace_finished_label">Close</string>
    <string name="view_fragment_label">View My Place</string>
    <string name="map_fragment_label">Map</string>
    <string name="editmyplace_longitude_label">Longitude</string>
    <string name="editmyplace_latitude_label">Latitude</string>
    <string name="editmyplace_button_set_coordinates">Set</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>