<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="elfak.mosis.myplaces.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_EditFragment"
            app:destination="@id/EditFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListFragment"
        android:name="elfak.mosis.myplaces.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_ListFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_ListFragment_to_EditFragment"
            app:destination="@id/EditFragment" />
        <action
            android:id="@+id/action_ListFragment_to_ViewFragment"
            app:destination="@id/ViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/EditFragment"
        android:name="elfak.mosis.myplaces.EditFragment"
        android:label="@string/edit_fragment_label"
        tools:layout="@layout/fragment_edit">
        <action
            android:id="@+id/action_EditFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_EditFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
    </fragment>
    <fragment
        android:id="@+id/ViewFragment"
        android:name="elfak.mosis.myplaces.ViewFragment"
        android:label="@string/view_fragment_label"
        tools:layout="@layout/fragment_view">
        <action
            android:id="@+id/action_ViewFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
    </fragment>
</navigation>